- moved side nav logic to its own component file and changed styling - created new page in side bar menu for recurring bills - hid sidebar component from transactions page to avoid overlap with back button

--- a/front-end/src/pages/Transactions.css
+++ b/front-end/src/pages/Transactions.css
@@ -1,5 +1,6 @@
 .transactions-page {
     padding: 20px;
+    padding-bottom: 70px;
   }
   
   .back-button {
