--- a/front-end/src/pages/home.css
+++ b/front-end/src/pages/home.css
@@ -1,5 +1,6 @@
 .home-container {
     padding: 20px;
+    padding-bottom: 70px;
     font-family: Arial, sans-serif;
 }
 
@@ -74,7 +75,7 @@ h2 {
 }
 
 /* view breakdown */
-.view-all-btn {
+.view-breakdown {
     display: flex;
     justify-content: center;
     margin: 0px auto;
@@ -110,9 +111,15 @@ h2 {
 }
 
 /* transactions */
-.transactions h2 {
-    margin-bottom: 10px;
+.transactions-link {
+    color: inherit; 
+    text-decoration: none;
 }
+
+.transactions-link:hover {
+    color: #345e9a; 
+}
+
 
 .transaction-list {
     list-style: none;
